# anycoin

./: .gitignore  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yaml
anycoin/: __init__.py  _enums.py  _mapped_ids.py  abc.py  cache.py  exeptions.py  response_models.py
anycoin/_data/: mapped_cgk_coin_ids.json  mapped_cgk_quote_ids.json  mapped_cmc_crypto_ids.json  mapped_cmc_quote_ids.json
anycoin/_interfaces/: async_.py  sync.py
anycoin/services/: base.py  coingecko.py  coinmarketcap.py
examples/: async_.py  sync.py
tests/: conftest.py  test_anums.py  test_cache.py  test_mapped_ids.py  test_response_models.py
tests/_interfaces/: test_async_.py  test_sync.py
tests/services/: test_base.py  test_coingecko.py  test_coinmarketcap.py
