[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anycoin"
version = "0.1.0"
authors = [
    {name = "Mattew S.", email = "mattewsub6565@gmail.com"}
]
description = ""
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.10"

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.7.0",
    "aiocache>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.2",
    "taskipy>=1.14.1",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
]
redis-cache = [
    "aiocache[redis]>=0.12.3"
]
memcached-cache = [
    "aiocache[memcached]>=0.12.3"
]

[project.urls]
Homepage = "https://github.com/HK-Mattew/anycoin"
Documentation = "https://github.com/HK-Mattew/anycoin/tree/main/examples"
Repository = "https://github.com/HK-Mattew/anycoin"
Issues = "https://github.com/HK-Mattew/anycoin/issues"

[tool.setuptools.package-data]
anycoin = ["_data/*.json"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ["PLR6201"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
pre_test = 'task lint'
test = 'pytest --cov=anycoin -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
